syntax = "proto3";
option go_package = "genproto/BusService";
package TransportService;

service TransportService {
  rpc GetBusSchedule (BusScheduleRequest) returns (BusScheduleResponse);
  rpc TrackBusLocation (BusLocationRequest) returns (BusLocationResponse);
  rpc ReportTrafficJam (TrafficJamRequest) returns (TrafficJamResponse);
}

message BusScheduleRequest {
  string BusNumber = 1;
}

message BusScheduleResponse {
  repeated string schedule = 1;
}

message BusLocationRequest {
  string BusNumber = 1;
}

message BusLocationResponse {
  float latitude = 1;
  float longitude = 2;
}

message TrafficJamRequest {
  string location = 1;
  string description = 2;
}

message TrafficJamResponse {
  bool success = 1;
}
